# agama

doc/: auto_storage.md
rust/: Cargo.toml
rust/agama-hackweek-ancor/: Cargo.toml
rust/agama-hackweek-ancor/src/: main.rs
rust/agama-hackweek-ancor/src/app/: model.rs
rust/agama-hackweek-ancor/src/components/: mod.rs  select_device.rs  textarea_actions.rs
rust/agama-l10n/src/: start.rs
rust/agama-lib/share/: storage.model.schema.json  storage.schema.json
rust/agama-lib/src/: storage.rs
rust/agama-lib/src/storage/: client.rs
rust/agama-server/src/server/: web.rs
service/lib/agama/storage/: config.rb  proposal.rb  system.rb
service/lib/y2storage/proposal/: agama_device_planner.rb  agama_devices_creator.rb  agama_devices_planner.rb  agama_drive_planner.rb  agama_md_raid_planner.rb  agama_partitioner.rb
service/test/agama/storage/: config_solver_test.rb  config_test.rb  proposal_test.rb  system_test.rb
service/test/y2storage/: agama_proposal_test.rb
web/src/api/storage/: types.ts
web/src/components/overview/: StorageSection.tsx
web/src/components/storage/: BootSelection.test.tsx  ConfigEditor.test.tsx  ConfigEditor.tsx  ConfigureDeviceMenu.test.tsx  ConfigureDeviceMenu.tsx  DeviceSelectorModal.tsx  DriveEditor.tsx  FormattableDevicePage.tsx  MdRaidEditor.tsx  PartitionsMenu.tsx  ProposalActionsSection.jsx  ProposalFailedInfo.tsx  ProposalPage.jsx  ProposalPage.test.tsx  ProposalPage.tsx  ProposalResultSection.jsx  ProposalSettingsSection.jsx  SearchedDeviceMenu.tsx  VolumeGroupEditor.tsx  index.js  utils.ts
web/src/helpers/storage/: boot.ts  (+3 more)
(+27 files in other folders)
