[package]
name = "agama-hackweek-ancor"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
textwrap = "^0.16"
tui-realm-stdlib = "1.3.0"
tuirealm = { version = "^1.9.0", default-features = false, features = [
  "derive",
] }
unicode-width = "^0.1.10"
agama-lib = { path = "../agama-lib" }
futures = "0.3.29"

[[bin]]
name = "agama-hackweek-ancor"
path = "src/main.rs"
